// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI XUIFilePreviewFooter/> renders a passed qaHook as an automationId 1`] = `
<DocumentFragment>
  <footer
    class="xui-filepreviewfooter"
    data-automationid="test-filepreviewfooter"
  >
    <div
      class="xui-filepreviewfooter--controls"
    >
      <div />
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<XUI XUIFilePreviewFooter/> renders alternate wrapping element, if provided 1`] = `
<DocumentFragment>
  <section
    class="xui-filepreviewfooter"
  >
    <div
      class="xui-filepreviewfooter--controls"
    >
      <div />
    </div>
  </section>
</DocumentFragment>
`;

exports[`<XUI XUIFilePreviewFooter/> renders any additional classes provided through the className prop 1`] = `
<DocumentFragment>
  <footer
    class="filepreviewfooter-class xui-filepreviewfooter"
  >
    <div
      class="xui-filepreviewfooter--controls"
    >
      <div />
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<XUI XUIFilePreviewFooter/> renders basic example correctly 1`] = `
<DocumentFragment>
  <footer
    class="xui-filepreviewfooter"
  >
    <div
      class="xui-filepreviewfooter--controls"
    >
      <div />
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<XUI XUIFilePreviewFooter/> renders with a pagination prop, if provided 1`] = `
<DocumentFragment>
  <footer
    class="xui-filepreviewfooter"
  >
    <div
      class="xui-filepreviewfooter--controls"
    >
      <div />
    </div>
    <div
      class="xui-filepreviewfooter--pagination"
    >
      <div />
    </div>
  </footer>
</DocumentFragment>
`;
